sync api working tests green
